jswt-parser/src/snapshots/jswt_parser__test__parse_member_dot_is_left_associative.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "parse_member_dot_is_left_associative",
                    module: "module/parse_member_dot_is_left_associative",
                    start: 0,
                    end: 34,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "parse_member_dot_is_left_associative",
                        module: "module/parse_member_dot_is_left_associative",
                        start: 0,
                        end: 34,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "parse_member_dot_is_left_associative",
                                    module: "module/parse_member_dot_is_left_associative",
                                    start: 0,
                                    end: 34,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "parse_member_dot_is_left_associative",
                                        module: "module/parse_member_dot_is_left_associative",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "parse_member_dot_is_left_associative",
                                        module: "module/parse_member_dot_is_left_associative",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "parse_member_dot_is_left_associative",
                                        module: "module/parse_member_dot_is_left_associative",
                                        start: 16,
                                        end: 34,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "parse_member_dot_is_left_associative",
                                                        module: "module/parse_member_dot_is_left_associative",
                                                        start: 18,
                                                        end: 32,
                                                    },
                                                    expression: Additive(
                                                        BinaryExpression {
                                                            span: Span {
                                                                file: "parse_member_dot_is_left_associative",
                                                                module: "module/parse_member_dot_is_left_associative",
                                                                start: 18,
                                                                end: 31,
                                                            },
                                                            left: MemberDot(
                                                                MemberDotExpression {
                                                                    span: Span {
                                                                        file: "parse_member_dot_is_left_associative",
                                                                        module: "module/parse_member_dot_is_left_associative",
                                                                        start: 18,
                                                                        end: 27,
                                                                    },
                                                                    target: This(
                                                                        ThisExpression {
                                                                            span: Span {
                                                                                file: "parse_member_dot_is_left_associative",
                                                                                module: "module/parse_member_dot_is_left_associative",
                                                                                start: 18,
                                                                                end: 22,
                                                                            },
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                    expression: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "parse_member_dot_is_left_associative",
                                                                                module: "module/parse_member_dot_is_left_associative",
                                                                                start: 23,
                                                                                end: 27,
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "parse_member_dot_is_left_associative",
                                                                                    module: "module/parse_member_dot_is_left_associative",
                                                                                    start: 23,
                                                                                    end: 27,
                                                                                },
                                                                                value: "data",
                                                                            },
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            op: Plus(
                                                                Span {
                                                                    file: "parse_member_dot_is_left_associative",
                                                                    module: "module/parse_member_dot_is_left_associative",
                                                                    start: 28,
                                                                    end: 29,
                                                                },
                                                            ),
                                                            right: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        span: Span {
                                                                            file: "parse_member_dot_is_left_associative",
                                                                            module: "module/parse_member_dot_is_left_associative",
                                                                            start: 30,
                                                                            end: 31,
                                                                        },
                                                                        value: 1,
                                                                        ty: Unknown,
                                                                    },
                                                                ),
                                                            ),
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
