jswt-parser/src/snapshots/jswt_parser__test__parse_multi_dimensional_array_type_annotation.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "parse_multi_dimensional_array_type_annotation",
                    module: "module/parse_multi_dimensional_array_type_annotation",
                    start: 0,
                    end: 44,
                    [content]: "function exit(code: i32[][]): string[][] { }",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "parse_multi_dimensional_array_type_annotation",
                        module: "module/parse_multi_dimensional_array_type_annotation",
                        start: 0,
                        end: 44,
                        [content]: "function exit(code: i32[][]): string[][] { }",
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "parse_multi_dimensional_array_type_annotation",
                                    module: "module/parse_multi_dimensional_array_type_annotation",
                                    start: 0,
                                    end: 44,
                                    [content]: "function exit(code: i32[][]): string[][] { }",
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "parse_multi_dimensional_array_type_annotation",
                                        module: "module/parse_multi_dimensional_array_type_annotation",
                                        start: 9,
                                        end: 13,
                                        [content]: "exit",
                                    },
                                    value: "exit",
                                },
                                params: FormalParameterList {
                                    parameters: [
                                        FormalParameterArg {
                                            ident: Identifier {
                                                span: Span {
                                                    file: "parse_multi_dimensional_array_type_annotation",
                                                    module: "module/parse_multi_dimensional_array_type_annotation",
                                                    start: 14,
                                                    end: 18,
                                                    [content]: "code",
                                                },
                                                value: "code",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "parse_multi_dimensional_array_type_annotation",
                                                    module: "module/parse_multi_dimensional_array_type_annotation",
                                                    start: 20,
                                                    end: 27,
                                                    [content]: "i32[][]",
                                                },
                                                ty: Object(
                                                    Array(
                                                        Object(
                                                            Array(
                                                                Primitive(
                                                                    I32,
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "parse_multi_dimensional_array_type_annotation",
                                            module: "module/parse_multi_dimensional_array_type_annotation",
                                            start: 30,
                                            end: 40,
                                            [content]: "string[][]",
                                        },
                                        ty: Object(
                                            Array(
                                                Object(
                                                    Array(
                                                        Object(
                                                            String,
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                body: BlockStatement {
                                    span: Span {
                                        file: "parse_multi_dimensional_array_type_annotation",
                                        module: "module/parse_multi_dimensional_array_type_annotation",
                                        start: 41,
                                        end: 44,
                                        [content]: "{ }",
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
