jswt-parser/src/snapshots/jswt_parser__test__parse_multiplicative_expression.snap
---
source: jswt-parser/src/lib.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_multiplicative_expression",
                    module: "module/test_parse_multiplicative_expression",
                    start: 0,
                    end: 14,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_multiplicative_expression",
                        module: "module/test_parse_multiplicative_expression",
                        start: 0,
                        end: 14,
                    },
                    source_elements: [
                        VariableDeclaration(
                            VariableDeclarationElement {
                                annotations: [],
                                export: false,
                                span: Span {
                                    file: "test_parse_multiplicative_expression",
                                    module: "module/test_parse_multiplicative_expression",
                                    start: 0,
                                    end: 14,
                                },
                                modifier: Let(
                                    Span {
                                        file: "test_parse_multiplicative_expression",
                                        module: "module/test_parse_multiplicative_expression",
                                        start: 0,
                                        end: 3,
                                    },
                                ),
                                name: Identifier {
                                    span: Span {
                                        file: "test_parse_multiplicative_expression",
                                        module: "module/test_parse_multiplicative_expression",
                                        start: 4,
                                        end: 5,
                                    },
                                    value: "x",
                                },
                                expression: Multiplicative(
                                    BinaryExpression {
                                        span: Span {
                                            file: "test_parse_multiplicative_expression",
                                            module: "module/test_parse_multiplicative_expression",
                                            start: 8,
                                            end: 13,
                                        },
                                        left: Literal(
                                            Integer(
                                                IntegerLiteral {
                                                    span: Span {
                                                        file: "test_parse_multiplicative_expression",
                                                        module: "module/test_parse_multiplicative_expression",
                                                        start: 8,
                                                        end: 9,
                                                    },
                                                    value: 3,
                                                    ty: Binding(
                                                        "i32",
                                                    ),
                                                },
                                            ),
                                        ),
                                        op: Mult(
                                            Span {
                                                file: "test_parse_multiplicative_expression",
                                                module: "module/test_parse_multiplicative_expression",
                                                start: 10,
                                                end: 11,
                                            },
                                        ),
                                        right: Literal(
                                            Integer(
                                                IntegerLiteral {
                                                    span: Span {
                                                        file: "test_parse_multiplicative_expression",
                                                        module: "module/test_parse_multiplicative_expression",
                                                        start: 12,
                                                        end: 13,
                                                    },
                                                    value: 2,
                                                    ty: Binding(
                                                        "i32",
                                                    ),
                                                },
                                            ),
                                        ),
                                        ty: Unknown,
                                    },
                                ),
                                type_annotation: None,
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
