jswt-parser/src/snapshots/jswt_parser__test__parse_nested_empty_blocks.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        Statement(
                            Block(
                                BlockStatement {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 0,
                                        end: 6,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Block(
                                                BlockStatement {
                                                    span: Span {
                                                        file: "test.1",
                                                        module: "module/test.1",
                                                        start: 2,
                                                        end: 4,
                                                    },
                                                    statements: StatementList {
                                                        statements: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
